Configure maven-surefire-plugin
Signed-off-by: tison <wander4096@gmail.com>